Backbitten with right classes

--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -89,7 +89,7 @@
 					status: 0,
 				}
 			}).done(function (data) {
-				alert(data);//get result from php
+				//alert(data);//get result from php
 				window.location.href = "../pages/lecture-questions.html?courseID="+getParameterByName("courseID");
 			   });	
 
