--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -170,7 +170,7 @@
 	<section>
 		<div class='header-l-prepare'>
 			<!-- Back button -->
-			<a href='lecture-prepare.html'><div class='button-back-prepare'> <p> Back </p></div></a>
+			<a href='lecture-prepare.html'><div class='button-back-prepare-response'> <p> Back </p></div></a>
 			<!-- Logo (small) -->
 			<div class="headerpos">
 			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
@@ -178,7 +178,7 @@
 			<h3 class='type-title'> Create Questions </h3>
 			</div>
 			<!-- Switch button -->
-			<a id="goto-lecture-mode" href='lecture-questions.html'><div class='button-goto-lecture'> <p> Goto Lecture Mode </p></div></a>
+			<a id="goto-lecture-mode" href='lecture-questions.html'><div class='button-goto-lecture'> <p> goto Lecture Mode </p></div></a>
 		
 		</div>
 	</section>
