fixed back button

--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -18,12 +18,15 @@
 
 
 <body>
-<div id="headers-top-bar">
-  <img src="../assets/images/topbar-logo.png"></img>
+<div class="header-l-prepare">
+<a href="index.html"><div class="button-back-lecture-response"> <p> Back </p></div></a>
+<div class="headerpos">
+  <img class='images-l-subjects'src="../assets/images/topbar-logo.png"/>
+  </div>
 </div>
 
 <!-- Back button -->
-<button class="drawing-app-back" onClick="window.location.href='http://teamone.uqcloud.net'">Back</button>
+
 <span id="questionController"></span>
 <!--
 <section class="student-question">
