Can edit questions now

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     	var separators = [ '-',  '_', '\\\?'];
     	var res  = str.split(new RegExp(separators.join('|'), 'g'));
 		var output = res[0]+" - Semester "+res[2]+", 20"+res[1];
-		return	'<a href="pages/student-questions.html?courseID='+courseItem+'><li> <span class="subject">'+output+'</span> </lI></a>';
+		return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li><span class="subject">'+output+'</span> </li></a>';
 		//end here
 		//return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+courseItem+'</span> </lI></a>';
 	}
