fixed the link on student-questions

--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -19,7 +19,7 @@
 
 <body>
 <div class="header-l-prepare">
-<a href="index.html"><div class="button-back-lecture-response"> <p> Back </p></div></a>
+<a href="../index.html"><div class="button-back-lecture-response"> <p> Back </p></div></a>
 <div class="headerpos">
   <img class='images-l-subjects'src="../assets/images/topbar-logo.png"/>
   </div>
