moved Enter Subject Code to the top

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 	<!-- All styles in this section are in scss/partials/_start_three_input.scss -->
 	<section class="start-section-input">
+		<h3> Enter Subject Code </h3>
 		<form id="start-input">
 			<input id="CodeInputOne" onkeyup="return forceLower(this);" class='CodeInput' type='text' value='' maxlength="1" />
 			<input id="CodeInputTwo" onkeyup="return forceLower(this);" class='CodeInput' type='text' value='' maxlength="1"/>
 			<input id="CodeInputThree" onkeyup="return forceLower(this);" class='CodeInput' type='text' value='' maxlength="1"/>
 		</form>
-		<h3> Enter subject Code </h3>
 	</section>
 
 
