--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -19,10 +19,15 @@
 
 	<!-- Questions -->
 	<section>
+
+		<!-- Instructions (step 1 and step 2) -->
+		<div class="instruction-container"><div class="circle-number"><p>1</p></div> <h3> Goto <span>teamone.uqcloud.net</span> </h3></div>
+		<div class="instruction-container"><div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"> 9ag </span> </h3></div>
+		<div class="instruction-bottom"></div>
+		
 		<!-- The question goes here, get id question -->
-		<h2 class="type-body-heading">Question: <span id="question-title">Draw My House House House House House House House House House House House House</span> </h2>
-		<h3 class="type-body-heading">URL: http://teamone.uqcloud.net 
-		<p>ENTER CODE: <span id = "code"> 3fg </span></h3>
+		<h2 class="instruction-q">QUESTION</div>
+		<h2 class="instruction-question"> <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
 
 		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
@@ -37,7 +42,11 @@
 		<div class="theme-time1"><p>2 minutes</p> </div>
 		<div class="theme-time05"><p>1 minute</p> </div>
 		
+		
+		
 		<div class="theme-response-actions">
+
+
 			<!-- Enter PHP values in the spans -->
 			<!--<h2> Responses <span id="responses">23</span> </h2> -->
 			<h2> Time: <span id="time-left">04:00</span></h2>
