button color change

--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -105,11 +105,21 @@
 	</section>
 
 	<section class = "list-questions-purple">
-		<h2> <span id="subject">Subject 1</span> URL: http://teamone.uqcloud.net </h2>
-		<h2>Code: <span id="code"> 3FC </span> </h2>
-		<h3> Questions </h3>
+
+		<!-- Show Subject -->
+
+
+		<!-- Instructions (step 1 and step 2) -->
+		<div class="instruction-container"><div class="circle-number"><p>1</p></div> <h3> Goto <span>teamone.uqcloud.net</span> </h3></div>
+		<div class="instruction-container"><div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"> 9ag </span> </h3></div>
+		<div class="instruction-bottom"></div>
+	
+		<!-- -->
 
 		<ul><span id="questionsList">
+
+			<h2 class="text-subject"> <span id="subject">Subject 1</span></h2>
+
 			<li>
 				<label> Lecture 1</label>
 				<div class="question-container">
