right colour back button

--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -100,7 +100,7 @@
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
 			</div>
 			<a id="goto-prepare-mode" href="lecture-makequestions.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
-			<a href="../pages/lecture-subjects.html"><div class="button-back-lecture"> <p> Back</p></div></a>
+			<a href="../pages/lecture-subjects.html"><div class="button-back-lecture-response"> <p> Back</p></div></a>
 		</div>
 	</section>
 
