Student correct answer page is finished

--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -179,7 +179,7 @@
   });
   var PrevQuestion = React.createClass({//item of each record
             render: function() {
-              var resultLink = "";//tobe confirm
+              var resultLink = "student-correctanswers.html?questionID="+this.props.questionID;//tobe confirm
               return (
                       <div>
                       <a href={resultLink}><li>
