closed question got different style

--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -67,7 +67,6 @@
               if (getParameterByName("enteringCode") != "") {
                 enteringCode = getParameterByName("enteringCode");
                 Requesturl= "http://teamone.uqcloud.net/uqDrawBackend/retrieveQuestionsfromThreeDigitCode.php?enteringCode="+enteringCode;
-              //console.log("3digit");
               }
             }
 
@@ -147,7 +146,7 @@
           <h2 className="type-body-heading"> <span> Open Questions </span> </h2>
   <ul className="student-list" >  {openQuestions}</ul>
           <h2 className="type-body-heading"> <span> Closed Questions</span> </h2>
-  <ul className="student-list" >  {notOpenQuestions}</ul>
+  <ul className="closed-questions" >  {notOpenQuestions}</ul>
           <h2 className="type-body-heading"> <span> PREVIOUS RESPONSES </span> </h2>
   <ul className="student-list" > {prevQuestions}</ul>
           </section>
@@ -171,7 +170,7 @@
             render: function() {
               return (
                       <div>
-                      <li>
+                      <li >
                       <span> {this.props.title} </span></li>
           </div>
   );
